--- a/assets/l10n/app_en.arb
+++ b/assets/l10n/app_en.arb
@@ -10,6 +10,19 @@
     "email": "Email",
     "password": "Password",
     "login": "Login",
+    "register": "Register",
+    "forgotPassword": "Forgot Password?",
+    "emailAddress": "Email Address",
+    "send": "Send",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "confirmPassword": "Confirm Password",
+    "alreadyHaveAnAccount": "Already have an account?",
+    "dontHaveAnAccount": "Don't have an account?",
+    "loginToYourAccount": "Login to your account",
+    "createAnAccount": "Create an account",    
+    "passwordsDoNotMatch": "Passwords do not match!",
+    "emailAlreadyExists": "Email already exists!",
     "emailValidationError": "Invalid email format",
     "passwordValidationError": "Password must be at least 6 characters",
     "wrongEmailOrPassword": "Email or password is wrong!"
