home view updated search added for airports

--- a/assets/l10n/app_en.arb
+++ b/assets/l10n/app_en.arb
@@ -25,5 +25,6 @@
     "emailAlreadyExists": "Email already exists!",
     "emailValidationError": "Invalid email format",
     "passwordValidationError": "Password must be at least 6 characters",
-    "wrongEmailOrPassword": "Email or password is wrong!"
+    "wrongEmailOrPassword": "Email or password is wrong!",
+    "bookAFlight": "Book a flight"
 }
